--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,12 @@
 		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
 		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
 		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400&family=Orbitron:wght@400;500;600;700&display=swap"
+			rel="stylesheet"
+		/>
 		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 		<title>Timothé Gonin</title>
 	</head>
